updated work with weave and component library, and some stuff on the about and contact pages

--- a/src/assets/projects-data.json
+++ b/src/assets/projects-data.json
@@ -17,35 +17,22 @@
     },
     {
       "id": 2,
-      "name": "ExpertVoice Studios",
-      "type": "Marketing Site",
-      "length": "",
-      "buildtime": "6 hours",
-      "description": "This is a site I put together, meant to house all the great work that our agency created. I faught a terribly annoying wordpress plugin, and accomplished like 80% of my goal for usability and interface design.",
-      "responsibilities": "xx",
-      "logo": "assets/clients/expertvoice/ev-logo.png",
-      "header": "assets/clients/expertvoice/ev-tile.jpg",
-      "preview": "assets/clients/expertvoice/ev-preview.jpg",
-      "budget": "",
-      "scope": "",
-      "problem": "The sales department of ExpertVoice had difficulty picking the most up-to-date or relevant content to show prospective brand partners.",
-      "plan": "Essentially, remove the communication barrier between Sales and Creative. Create a website that would act like a script for the content creation sales pitch, complete with links to the most up-to-date content. Updated by the creative team, quartly, used by the sales team daily.",
-      "path": "EVstudios",
-      "url": "https://www.expertvoice.com/studios/",
-      "process": "We started by surveying the sales department, asking questions about how we could better support them in selling more custom web content. We found that they had been showing some very out of date work from our in-house-agency and immediately started work on a site to pitch custom content, and house all our best work. The design process was iterative, more so than I would have liked, we had a lot of stakeholders for something that was just supposed to be an internal tool, but after 3 rounds of feedback working from a medium-fidelity adobe XD mockup, I started building the site. After it was all built, we threw it over to them and watched as they navigated... we simplified things, and pressed the publish button. It's one of the most used sites on the whole signed-out side of the business, now!"
-    },
-    {
-      "id": 3,
       "name": "Building Blocks",
       "type": "Component Library",
-      "description": "Fractal is an open source component library tool, that give organizations the freedom to template in whatever language they want. This allowed us to create a library that had custom varaibles for our proprietary LMS and it gave us a good structure to build our library around. ",
+      "length": "",
+      "buildtime": "99 hours",
+      "description": "Fractal is an open source component library tool, that give organizations the freedom to template in whatever language they want. This allowed us to create a library that had custom varaibles for our proprietary LMS and it gave us a good structure to build our library around.",
+      "responsibilities": "xx",
       "logo": "assets/clients/expertvoice/ev-logo.png",
-      "header": "assets/clients/expertvoice/ev-tile3.jpg",
-      "preview": "assets/clients/expertvoice/ev-preview3.jpg",
+      "header": "assets/clients/expertvoice/bb-tile.jpg",
+      "preview": "assets/clients/expertvoice/bb-preview.jpg",
+      "budget": "",
+      "scope": "",
       "problem": "With every new project a designer would have to start building a web experience from scratch. It quickly became a mess of everyone copying the last build they did, then modifying code to acommodate whatever content came in. ",
       "plan": "Build a tool that helps our staff designers create new experiences quickly.",
       "path": "buildingblocks",
-      "url": "https://cdn.expertvoice.com/client/mfg/buildingblocks/1.x.x/components/detail/typographic-elements.html"
+      "url": "https://cdn.expertvoice.com/client/mfg/buildingblocks/1.x.x/components/detail/adminweb-branding.html",
+      "process": "We started by flagging all the interactions we liked and used frequently. Then we looked into building our own solution and found it would be far cheaper in terms of man-hours to use a library like fractal.build. So we did that."
     },
     {
       "id": 4,
