--- a/src/assets/projects-junkyard.json
+++ b/src/assets/projects-junkyard.json
@@ -1,6 +1,24 @@
 {
   "data": [{
-
+    {
+      "id": 2,
+      "name": "ExpertVoice Studios",
+      "type": "Marketing Site",
+      "length": "",
+      "buildtime": "6 hours",
+      "description": "This is a site I put together, meant to house all the great work that our agency created. I faught a terribly annoying wordpress plugin, and accomplished like 80% of my goal for usability and interface design.",
+      "responsibilities": "xx",
+      "logo": "assets/clients/expertvoice/ev-logo.png",
+      "header": "assets/clients/expertvoice/ev-tile.jpg",
+      "preview": "assets/clients/expertvoice/ev-preview.jpg",
+      "budget": "",
+      "scope": "",
+      "problem": "The sales department of ExpertVoice had difficulty picking the most up-to-date or relevant content to show prospective brand partners.",
+      "plan": "Essentially, remove the communication barrier between Sales and Creative. Create a website that would act like a script for the content creation sales pitch, complete with links to the most up-to-date content. Updated by the creative team, quartly, used by the sales team daily.",
+      "path": "EVstudios",
+      "url": "https://www.expertvoice.com/studios/",
+      "process": "We started by surveying the sales department, asking questions about how we could better support them in selling more custom web content. We found that they had been showing some very out of date work from our in-house-agency and immediately started work on a site to pitch custom content, and house all our best work. The design process was iterative, more so than I would have liked, we had a lot of stakeholders for something that was just supposed to be an internal tool, but after 3 rounds of feedback working from a medium-fidelity adobe XD mockup, I started building the site. After it was all built, we threw it over to them and watched as they navigated... we simplified things, and pressed the publish button. It's one of the most used sites on the whole signed-out side of the business, now!"
+    },
     {
       "id": 10,
       "name": "Prime AV",
@@ -161,7 +179,7 @@
       "moduleMetrics": "1,0.75,1,0.5,0,0,1,.25,1,1,0,0",
       "path": "lander",
       "url": "https://www.experticity.com/sign-in?identifier=salesdemo&password=access&signInRedirect=%2Flearn%2Fpreview%3FmoduleId%3D13704%26campaignId%3D5688"
-    }
+    },
     {
       "id": 15,
       "name": "Dakine",
