--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/angular-fontawesome": "^0.5.0",
     "bootstrap": "^4.3.1",
     "core-js": "^2.6.10",
+    "firebase": "^8.0.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
     "ngx-scrollreveal": "^3.0.0",
