buncha minor fixes and updates

--- a/src/assets/projects-data.json
+++ b/src/assets/projects-data.json
@@ -1,6 +1,5 @@
 {
   "data": [
-
     {
       "id": 1,
       "name": "ExpertVoice",
@@ -53,7 +52,7 @@
       "quote": "Your team was so wonderful, so professional, so organized, and so seamless during our content build. The level of professionalism was superb, we couldn’t ask for a better partnership than what we have with you and ExpertVoice.",
       "stakeholder": "",
       "path": "lenovo",
-      "url": "https://www.experticity.com/sign-in?identifier=salesdemo&password=access&signInRedirect=%2Flearn%2Fpreview%3FmoduleId%3D15790%26campaignId%3D5688",
+      "url": "https://www.experticity.com/sign-in?identifier=pstest&password=access&signInRedirect=%2Flearn%2Fpreview%3FmoduleId%3D15790%26campaignId%3D5688",
       "problem": "Lenovo wasn't getting as many sales as the AE thought they should be. He gave them a sweetheart deal on custom web content, yours truly fulfilled on that.",
       "plan": "Really, just put something up to fill the space, and drive traffic. I'm passionate about computers and lenovo in particular though. So I went all out."
     },
@@ -73,7 +72,7 @@
       "scope": "",
       "stakeholder": "Patrick Purcell, Marketing Manager – USA",
       "path": "descente",
-      "url": "https://www.experticity.com/sign-in?identifier=salesdemo&password=access&signInRedirect=%2Flearn%2Fpreview%3FmoduleId%3D14540%26campaignId%3D5688",
+      "url": "https://www.experticity.com/sign-in?identifier=pstest&password=access&signInRedirect=%2Flearn%2Fpreview%3FmoduleId%3D14540%26campaignId%3D5688",
       "problem": "Descente is a frech brand, currently operated out of Japan, where it has a massive following. You probably haven't heard of them though.",
       "plan": "Design a website that educates people on the over-the-top quality and thoughtful design elements that are found in Descente outerwear."
     },
@@ -94,7 +93,7 @@
       "quote": "",
       "stakeholder": "",
       "path": "teva",
-      "url": "https://www.experticity.com/sign-in?identifier=salesdemo&password=access&signInRedirect=%2Flearn%2Fpreview%3FmoduleId%3D15351%26campaignId%3D5688",
+      "url": "https://www.experticity.com/sign-in?identifier=pstest&password=access&signInRedirect=%2Flearn%2Fpreview%3FmoduleId%3D15351%26campaignId%3D5688",
       "problem": "People often forget, or don't know to begin with – Teva was born in the canyon",
       "plan": "Create a custom web experience celebrating Teva's canyon heritage and exploring the styles inspired by their unique roots."
     },
@@ -114,7 +113,7 @@
       "scope": "1 module",
       "stakeholder": "XXX",
       "path": "voke",
-      "url": "https://www.experticity.com/sign-in?identifier=salesdemo&password=access&signInRedirect=%2Flearn%2Fpreview%3FmoduleId%3D15536%26campaignId%3D5688",
+      "url": "https://www.experticity.com/sign-in?identifier=pstest&password=access&signInRedirect=%2Flearn%2Fpreview%3FmoduleId%3D15536%26campaignId%3D5688",
       "problem": "Voke was having a hard time selling their energy product in naturals retailers like GNC and educating their affiliates on the benefits / use-cases of their product.",
       "plan": "Take a Voke tab, then code up a website that explains how beneficial these natural ingredients can be, when taken in concert with one another."
     },
@@ -137,7 +136,7 @@
       "quote": "Overall I really like the design of the site, it's really digestible and above all else, just sexy! Really well done.",
       "stakeholder": "Wayne Dayberry, Marketing Specialist",
       "path": "nightforce",
-      "url": "https://www.experticity.com/sign-in?identifier=salesdemo&password=access&signInRedirect=%2Flearn%2Fpreview%3FmoduleId%3D14844%26campaignId%3D5688",
+      "url": "https://www.experticity.com/sign-in?identifier=pstest&password=access&signInRedirect=%2Flearn%2Fpreview%3FmoduleId%3D14844%26campaignId%3D5688",
       "problem": "Honestly, I don't remember. These guys are in my portfolio to show that I can apply good design to brands and products whose industries I have a hard time endorsing.",
       "plan": "Just look at the site and please don't judge me for having guns on my portfolio. #pewpew"
     },
@@ -157,7 +156,7 @@
       "scope": "5 modules",
       "stakeholder": "Chad Lavachek, Retail Marketing Manage",
       "path": "toms",
-      "url": "https://www.experticity.com/sign-in?identifier=salesdemo&password=access&signInRedirect=%2Flearn%2Fpreview%3FmoduleId%3D13866%26campaignId%3D5688",
+      "url": "https://www.experticity.com/sign-in?identifier=pstest&password=access&signInRedirect=%2Flearn%2Fpreview%3FmoduleId%3D13866%26campaignId%3D5688",
       "problem": "Everyone knows TOMS for the one for one business model, but in 2017 that was like the smallest part of their giving program.",
       "plan": "Create a web experience that educated people about the many other ways that TOMS gives back."
     },
@@ -179,7 +178,7 @@
       "path": "greenpan",
       "problem": "Customers were ruining their shiny new GreenpPans by treating them like any other pan.",
       "plan": "We made two engaging web experiences to help educate the sales staff in charge of educating consumers about the care and use of these unique pans.",
-      "url": "https://www.experticity.com/sign-in?identifier=salesdemo&password=access&signInRedirect=%2Flearn%2Fpreview%3FmoduleId%3D13275%26campaignId%3D5688"
+      "url": "https://www.experticity.com/sign-in?identifier=pstest&password=access&signInRedirect=%2Flearn%2Fpreview%3FmoduleId%3D13275%26campaignId%3D5688"
     },
     {
       "id": 11,
@@ -200,7 +199,7 @@
       "path": "hills",
       "problem": "Every 'pet parent'; has a different food related, Hill's neeed to cut through the BS about trendy diets, certify and credential their retail sales staff, and educate them about a massive wave of new and re-designed products.",
       "plan": "We created a long series of engaging web experiences. They were intentionally designed to be difficult so as to credential the retail employee. To this day Hill's is the higest $ amount of content purchased, and the longest-format content available on the ExpertVoice platform, and I helped design, pitch, and create all of it.",
-      "url": "https://www.experticity.com/sign-in?identifier=salesdemo&password=access&signInRedirect=%2Flearn%2Fpreview%3FmoduleId%3D15019%26campaignId%3D6261"
+      "url": "https://www.experticity.com/sign-in?identifier=pstest&password=access&signInRedirect=%2Flearn%2Fpreview%3FmoduleId%3D15019%26campaignId%3D6261"
     },
 
     {
